Added few more functionalities and fixed overall working