@@ -1,261 +1,272 @@
-# Grades & Marks Portal System
+# 🎓 GradePortal - Student Grade Management System
 
-A comprehensive JavaFX desktop application for managing student grades and academic records in educational institutions. This system provides a complete solution for student registration, marks entry, grade calculation, and academic reporting.
+A comprehensive JavaFX desktop application for managing student grades and academic records in educational institutions. Built with Java 21, JavaFX, and MySQL.
 
-## Features
+## ✨ Features
 
-### Core Functionality
-- **Student Management**: Add, edit, and manage student information with validation
-- **Subject Management**: Configure subjects with customizable maximum marks
-- **Marks Entry**: Record student marks with automatic grade calculation
-- **Results & Reports**: Generate comprehensive student reports and export data
-- **Dashboard Analytics**: View key metrics, top performers, and grade distributions
-- **Search & Filter**: Find students and results quickly with advanced filtering
+### 🔐 Authentication & User Roles
+- **Admin Login**: Full access to manage students, subjects, marks, and generate reports
+- **Student Login**: View personal profile, enrolled courses, grades, and download reports
+- **Role-based Access Control**: Secure separation between admin and student functionalities
 
-### Technical Features
-- **MVC Architecture**: Clean separation of concerns with Model-View-Controller pattern
-- **DAO Pattern**: Data Access Object pattern for all database operations
-- **MySQL Integration**: Full database connectivity with JDBC
-- **Professional UI**: Modern JavaFX interface with CSS styling
-- **Input Validation**: Comprehensive validation for all user inputs
-- **Export Functionality**: Export results to CSV format
-- **Configurable Grading**: Flexible grading scale (A+ to F)
+### 👨‍💼 Admin Dashboard
+- **Student Management**: Add, edit, delete, and search student records
+- **Subject Management**: Create and manage course subjects
+- **Marks Entry**: Assign grades to students for different subjects
+- **Results & Reports**: Generate comprehensive academic reports
+- **Data Export**: Export student data and grade reports
 
-## System Requirements
+### 👨‍🎓 Student Dashboard
+- **Personal Profile**: View student information and registration details
+- **Course Overview**: See enrolled subjects and course details
+- **Grade Display**: View marks and grades for all subjects
+- **Report Download**: Export personal grade reports in CSV format
 
-- **Java**: JDK 11 or higher
-- **Database**: MySQL 8.0 or higher
-- **IDE**: IntelliJ IDEA (recommended) or Eclipse
-- **Maven**: 3.6 or higher
-- **Operating System**: Windows, macOS, or Linux
+## 🛠️ Tech Stack
 
-## Installation & Setup
+- **Java**: 21 (LTS)
+- **JavaFX**: 21.0.3
+- **Database**: MySQL 8.0+
+- **Build Tool**: Maven 3.8+
+- **IDE**: VS Code (recommended)
 
-### 1. Database Setup
+## 📋 Prerequisites
 
-1. Install MySQL and ensure it's running
-2. Create a new database:
-   ```sql
-   CREATE DATABASE grades_portal_db;
-   ```
-3. Run the database setup script:
-   ```bash
-   mysql -u root -p grades_portal_db < database_setup.sql
-   ```
+- Java 21 JDK installed
+- MySQL 8.0+ server running
+- Maven 3.8+ installed
+- Git for version control
 
-### 2. Database Configuration
+## 🚀 Quick Start
 
-Update the database connection settings in `DatabaseManager.java`:
-```java
-private static final String DB_URL = "jdbc:mysql://localhost:3306/grades_portal_db";
-private static final String DB_USERNAME = "root"; // Your MySQL username
-private static final String DB_PASSWORD = ""; // Your MySQL password
+### 1. Clone the Repository
+```bash
+git clone <repository-url>
+cd GradePortal
 ```
 
-### 3. Project Setup
+### 2. Database Setup
+1. **Start MySQL Server**
+2. **Create Database and Tables**
+   ```bash
+   mysql -u root -p < database_setup.sql
+   ```
+   
+   Or manually run the SQL commands in your MySQL client:
+   ```sql
+   CREATE DATABASE grades_portal_db;
+   USE grades_portal_db;
+   -- Run the table creation scripts from database_setup.sql
+   ```
 
-1. Clone or extract the project files
-2. Open the project in IntelliJ IDEA
-3. Ensure the project is recognized as a Maven project
-4. Wait for Maven to download dependencies
+### 3. Configure Database Connection
+Update `src/main/java/com/gradeportal/util/DatabaseManager.java` with your MySQL credentials:
+```java
+private static final String DB_URL = "jdbc:mysql://localhost:3306/grades_portal_db";
+private static final String DB_USERNAME = "your_username";
+private static final String DB_PASSWORD = "your_password";
+```
 
-### 4. Running the Application
+### 4. Build and Run
+```bash
+# Clean and compile
+mvn clean compile
 
-#### Using Maven:
+# Run the application
+mvn javafx:run
+```
+
+## 🔑 Default Login Credentials
+
+### Admin Access
+- **Username**: `admin`
+- **Password**: `admin123`
+- **Role**: Administrator
+
+### Student Access
+- **Username**: `ST001`, `ST002`, `ST003`, `ST004`
+- **Password**: `student123`
+- **Role**: Student
+
+## 📁 Project Structure
+
+```
+GradePortal/
+├── src/
+│   ├── main/
+│   │   ├── java/
+│   │   │   └── com/gradeportal/
+│   │   │       ├── controller/          # FXML Controllers
+│   │   │       ├── dao/                 # Data Access Objects
+│   │   │       ├── model/               # Entity Classes
+│   │   │       ├── util/                # Utility Classes
+│   │   │       └── GradePortalApp.java  # Main Application
+│   │   ├── resources/
+│   │   │   ├── fxml/                    # FXML UI Files
+│   │   │   ├── css/                     # Stylesheets
+│   │   │   └── com/gradeportal/view/    # Additional Views
+│   │   └── module-info.java             # Java Module Configuration
+├── database_setup.sql                    # Database Setup Script
+├── pom.xml                               # Maven Configuration
+└── README.md                             # This File
+```
+
+## 🎯 Core Components
+
+### Controllers
+- **LoginController**: Handles user authentication and role-based routing
+- **AdminDashboardController**: Main admin interface with navigation
+- **StudentDashboardController**: Student-specific dashboard
+- **StudentsController**: Student CRUD operations
+- **SubjectsController**: Subject management
+- **MarksController**: Grade entry and management
+- **ResultsController**: Report generation and export
+
+### Data Access Layer
+- **StudentDAO**: Student database operations
+- **SubjectDAO**: Subject database operations
+- **MarkDAO**: Grade and mark database operations
+
+### Models
+- **Student**: Student entity with personal information
+- **Subject**: Course subject entity
+- **Mark**: Grade/mark entity linking students and subjects
+
+## 🔧 Configuration
+
+### Database Configuration
+The application connects to MySQL using JDBC. Update the connection parameters in `DatabaseManager.java`:
+- Database URL
+- Username
+- Password
+- Driver class
+
+### Application Settings
+- Window dimensions and properties in `GradePortalApp.java`
+- CSS styling in `application.css`
+- FXML layouts in the `fxml/` directory
+
+## 📊 Database Schema
+
+### Users Table
+- Authentication and role management
+- Links to students via roll number
+
+### Students Table
+- Student personal information
+- Registration details
+
+### Subjects Table
+- Course information
+- Credit system
+
+### Marks Table
+- Grade records
+- Links students and subjects
+
+## 🚀 Running the Application
+
+### Development Mode
 ```bash
 mvn clean javafx:run
 ```
 
-#### Using IntelliJ IDEA:
-1. Open the project
-2. Navigate to `src/main/java/com/gradeportal/GradePortalApp.java`
-3. Right-click and select "Run GradePortalApp.main()"
-
-#### Building JAR file:
+### Production Build
 ```bash
 mvn clean package
+java -jar target/grades-marks-portal-1.0.0.jar
 ```
 
-## Project Structure
-
-```
-grades-marks-portal/
-├── src/
-│   └── main/
-│       ├── java/
-│       │   └── com/gradeportal/
-│       │       ├── GradePortalApp.java          # Main application class
-│       │       ├── controller/                  # FXML controllers
-│       │       │   ├── MainController.java
-│       │       │   ├── DashboardController.java
-│       │       │   ├── StudentsController.java
-│       │       │   ├── MarksController.java
-│       │       │   ├── ResultsController.java
-│       │       │   └── SubjectsController.java
-│       │       ├── dao/                         # Data Access Objects
-│       │       │   ├── StudentDAO.java
-│       │       │   ├── SubjectDAO.java
-│       │       │   └── MarkDAO.java
-│       │       ├── model/                       # Entity classes
-│       │       │   ├── Student.java
-│       │       │   ├── Subject.java
-│       │       │   └── Mark.java
-│       │       └── util/                        # Utility classes
-│       │           ├── DatabaseManager.java
-│       │           ├── GradeCalculator.java
-│       │           └── AlertUtil.java
-│       └── resources/
-│           ├── fxml/                           # FXML view files
-│           │   ├── MainWindow.fxml
-│           │   ├── Dashboard.fxml
-│           │   ├── Students.fxml
-│           │   ├── Marks.fxml
-│           │   ├── Results.fxml
-│           │   └── Subjects.fxml
-│           └── css/
-│               └── application.css              # Application styling
-├── database_setup.sql                          # Database schema
-├── pom.xml                                     # Maven configuration
-└── README.md                                   # This file
+### Debug Mode
+```bash
+mvn clean javafx:run -Djavafx.debug=true
 ```
 
-## Usage Guide
+## 🧪 Testing
 
-### 1. Dashboard
-- View system statistics and key metrics
-- Monitor top performing students
-- Analyze grade distribution
-- Refresh data with the refresh button
+### Unit Tests
+```bash
+mvn test
+```
 
-### 2. Student Management
-- **Add Students**: Fill in student details and click "Add Student"
-- **Edit Students**: Select a student from the table, modify details, and click "Update"
-- **Delete Students**: Select a student and click "Delete" (with confirmation)
-- **Search**: Use the search field to find students by name or roll number
+### Integration Tests
+```bash
+mvn verify
+```
 
-### 3. Subject Management
-- **Add Subjects**: Enter subject name and maximum marks
-- **Edit Subjects**: Select and modify existing subjects
-- **Delete Subjects**: Remove subjects (only if no marks are associated)
+## 📝 Development Guidelines
 
-### 4. Marks Entry
-- **Select Student**: Choose from the dropdown list
-- **Select Subject**: Choose the subject for marks entry
-- **Enter Marks**: Input marks (0-100), grade is calculated automatically
-- **View Grade**: Real-time grade calculation and description
-- **Manage Entries**: Update or delete existing marks entries
+### Code Style
+- Follow Java naming conventions
+- Use meaningful variable and method names
+- Add comprehensive JavaDoc comments
+- Implement proper error handling
 
-### 5. Results & Reports
-- **Filter Results**: Filter by student or search across all results
-- **Generate Reports**: Select a student and generate comprehensive academic report
-- **Export Data**: Export filtered results to CSV format
-- **View Details**: Click on any result to see student report
+### FXML Guidelines
+- Use consistent naming conventions
+- Implement proper controller bindings
+- Follow JavaFX best practices
 
-## Database Schema
+### Database Guidelines
+- Use prepared statements for security
+- Implement proper connection pooling
+- Handle SQL exceptions gracefully
 
-### Students Table
-- `id` (INT, Primary Key, Auto Increment)
-- `name` (VARCHAR(100), Not Null)
-- `roll_number` (VARCHAR(20), Unique, Not Null)
-- `class` (VARCHAR(20), Not Null)
-- `registration_date` (DATE, Not Null)
-
-### Subjects Table
-- `id` (INT, Primary Key, Auto Increment)
-- `subject_name` (VARCHAR(100), Unique, Not Null)
-- `max_marks` (INT, Not Null, Default 100)
-
-### Marks Table
-- `id` (INT, Primary Key, Auto Increment)
-- `student_id` (INT, Foreign Key)
-- `subject_id` (INT, Foreign Key)
-- `marks_obtained` (DECIMAL(5,2), Not Null)
-- `grade` (CHAR(2), Not Null)
-- `entry_date` (DATE, Not Null)
-
-## Grading Scale
-
-| Grade | Percentage Range | Description |
-|-------|-----------------|-------------|
-| A+    | 95-100%         | Excellent   |
-| A     | 90-94%          | Excellent   |
-| A-    | 85-89%          | Very Good   |
-| B+    | 80-84%          | Good        |
-| B     | 75-79%          | Good        |
-| B-    | 70-74%          | Above Average |
-| C+    | 65-69%          | Average     |
-| C     | 60-64%          | Average     |
-| C-    | 55-59%          | Below Average |
-| D     | 50-54%          | Poor        |
-| F     | Below 50%       | Fail        |
-
-## Troubleshooting
+## 🐛 Troubleshooting
 
 ### Common Issues
 
-**Database Connection Failed:**
-- Ensure MySQL is running
-- Verify database credentials in `DatabaseManager.java`
-- Check if the database `grades_portal_db` exists
+1. **Database Connection Failed**
+   - Verify MySQL server is running
+   - Check database credentials
+   - Ensure database exists
 
-**JavaFX Runtime Issues:**
-- Ensure Java 11+ is installed
-- Verify JavaFX modules are available
-- Try running with: `java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -cp target/classes com.gradeportal.GradePortalApp`
+2. **FXML Loading Errors**
+   - Verify file paths are correct
+   - Check controller class names
+   - Ensure all imports are present
 
-**Maven Dependencies:**
-- Run `mvn clean install` to download dependencies
-- Check internet connection for dependency downloads
+3. **JavaFX Runtime Issues**
+   - Verify Java 21 is installed
+   - Check JavaFX dependencies
+   - Ensure proper module configuration
 
-**FXML Loading Errors:**
-- Ensure all FXML files are in `src/main/resources/fxml/`
-- Verify controller class names match FXML fx:controller attributes
+### Debug Mode
+Enable debug logging by setting system properties:
+```bash
+-Djavafx.debug=true
+-Dcom.gradeportal.debug=true
+```
 
-### Performance Tips
+## 🤝 Contributing
 
-- Regular database maintenance and indexing
-- Limit large data exports to avoid memory issues
-- Use search and filters for better performance with large datasets
-- Regular database backups recommended
+1. Fork the repository
+2. Create a feature branch
+3. Make your changes
+4. Add tests if applicable
+5. Submit a pull request
 
-## Contributing
+## 📄 License
 
-1. Follow the existing code structure and naming conventions
-2. Maintain MVC architecture principles
-3. Add proper error handling and validation
-4. Update documentation for new features
-5. Test thoroughly before committing changes
+This project is licensed under the MIT License - see the LICENSE file for details.
 
-## Security Considerations
+## 👥 Authors
 
-- Input validation is implemented for all user inputs
-- SQL injection prevention through prepared statements
-- Database credentials should be externalized in production
-- Consider implementing user authentication for production use
+- **GradePortal Team** - Initial work
 
-## Future Enhancements
+## 🙏 Acknowledgments
 
-- User authentication and role-based access
-- Advanced reporting with charts and graphs
-- Email notifications for report generation
-- Integration with external systems
-- Mobile application companion
-- Automated backup scheduling
+- JavaFX community for the excellent framework
+- MySQL team for the robust database system
+- Maven community for the build tool
 
-## Support
+## 📞 Support
 
-For technical support or questions:
-1. Check this README file
-2. Review the code comments and documentation
-3. Verify database setup and configuration
-4. Check system requirements compatibility
-
-## License
-
-This project is created for educational purposes. Feel free to modify and distribute according to your institution's requirements.
+For support and questions:
+- Create an issue in the repository
+- Contact the development team
+- Check the troubleshooting section
 
 ---
 
-**Version**: 1.0.0  
-**Last Updated**: January 2024  
-**Developed By**: Grade Portal Development Team
+**GradePortal** - Empowering Education Through Technology 🎓✨
